force-app/main/default/objects/Inspection_Shop_Task__c/Inspection_Shop_Task__c.object-meta.xml
<CustomObject>
    <label>Inspection Task</label>
    <nameField>
        <displayFormat>IST-{YYYY}{MM}{0000}</displayFormat>
        <label>任务编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>