force-app/main/default/objects/Inspection_Shop_Task__c/fields/AccountName_F__c.field-meta.xml
<CustomField>
    <fullName>AccountName_F__c</fullName>
    <formula>Shop__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客户</label>
    <type>Text</type>
</CustomField>