force-app/main/default/objects/Inspection_Shop_Task__c/fields/CompetitiveInformation__c.field-meta.xml
<CustomField>
    <fullName>CompetitiveInformation__c</fullName>
    <label>他社情报</label>
    <type>TextArea</type>
</CustomField>