force-app/main/default/objects/Inspection_Shop_Task__c/fields/CorporateInformation__c.field-meta.xml
<CustomField>
    <fullName>CorporateInformation__c</fullName>
    <label>法人情报</label>
    <type>TextArea</type>
</CustomField>