force-app/main/default/objects/Inspection_Shop_Task__c/fields/DateString__c.field-meta.xml
<CustomField>
    <fullName>DateString__c</fullName>
    <label>巡店日期文本(后台使用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>