force-app/main/default/objects/Inspection_Shop_Task__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>日期+门店</description>
    <externalId>true</externalId>
    <label>外键</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>