force-app/main/default/objects/Inspection_Shop_Task__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <label>图片链接</label>
    <type>Url</type>
</CustomField>