force-app/main/default/objects/Inspection_Shop_Task__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <description>计划巡店的日期</description>
    <inlineHelpText>Date of planned store visit</inlineHelpText>
    <label>巡店日期</label>
    <type>Date</type>
</CustomField>