force-app/main/default/objects/Inspection_Shop_Task__c/fields/Inspection_Plan__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>巡店计划</label>
    <referenceTo>Inspection_Shop_Plan__c</referenceTo>
    <relationshipLabel>Inspection Tasks</relationshipLabel>
    <relationshipName>Inspection_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>