force-app/main/default/objects/Inspection_Shop_Task__c/fields/Inspection_Plan_Commnets__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Plan_Commnets__c</fullName>
    <description>巡店计划的内容</description>
    <label>巡店计划(内容)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>