force-app/main/default/objects/Inspection_Shop_Task__c/fields/Inspection_Target__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Target__c</fullName>
    <description>巡店目的（用户创建巡店计划时填写）</description>
    <inlineHelpText>Purpose of visit (to be filled in when the user creates the inspection task)</inlineHelpText>
    <label>巡店目的</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>