force-app/main/default/objects/Inspection_Shop_Task__c/fields/Is_Create_Report__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否日报时创建的计划外到访</label>
    <type>Checkbox</type>
</CustomField>