force-app/main/default/objects/Inspection_Shop_Task__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>*IsNew</label>
    <type>Checkbox</type>
</CustomField>