force-app/main/default/objects/Inspection_Shop_Task__c/fields/IsTodayTask__c.field-meta.xml
<CustomField>
    <fullName>IsTodayTask__c</fullName>
    <formula>Inspection_Date__c == today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Today Task</label>
    <type>Checkbox</type>
</CustomField>