force-app/main/default/objects/Inspection_Shop_Task__c/fields/Last_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Date__c</fullName>
    <label>Last Task Date</label>
    <type>Date</type>
</CustomField>