force-app/main/default/objects/Inspection_Shop_Task__c/fields/Plan_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Plan_OwnerId__c</fullName>
    <formula>Inspection_Plan__r.OwnerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan OwnerId</label>
    <type>Text</type>
</CustomField>