force-app/main/default/objects/Inspection_Shop_Task__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>特别事项</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>