force-app/main/default/objects/Inspection_Shop_Task__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>结果报告</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已完成</fullName>
            </value>
            <value>
                <fullName>在交涉</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>