force-app/main/default/objects/Inspection_Shop_Task__c/fields/Share_Gridding_Code__c.field-meta.xml
<CustomField>
    <fullName>Share_Gridding_Code__c</fullName>
    <formula>Shop__r.Grid__r.Gridding_Code__c</formula>
    <label>*共享网格</label>
    <type>Text</type>
</CustomField>