force-app/main/default/objects/Inspection_Shop_Task__c/fields/Share_Shop__c.field-meta.xml
<CustomField>
    <fullName>Share_Shop__c</fullName>
    <formula>Shop__r.External_Key_ID__c</formula>
    <label>*共享门店</label>
    <type>Text</type>
</CustomField>