force-app/main/default/objects/Inspection_Shop_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>巡店计划的状态，包括已拜访、未拜访和计划外拜访三种</description>
    <inlineHelpText>Status of store visit, including visited, unvisited and unschedule visit.</inlineHelpText>
    <label>状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已到访</fullName>
                <label>Visited</label>
            </value>
            <value>
                <fullName>未到访</fullName>
                <default>true</default>
                <label>Unvisited</label>
            </value>
            <value>
                <fullName>计划外到访</fullName>
                <label>Unscheduled Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>