force-app/main/default/objects/Inspection_Shop_Task__c/fields/StoreInformation__c.field-meta.xml
<CustomField>
    <fullName>StoreInformation__c</fullName>
    <label>店铺情报</label>
    <type>TextArea</type>
</CustomField>