force-app/main/default/objects/Inspection_Shop_Task__c/fields/StoreMaintain__c.field-meta.xml
<CustomField>
    <fullName>StoreMaintain__c</fullName>
    <label>门店维护</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>济</fullName>
            </value>
            <value>
                <fullName>未</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>