force-app/main/default/objects/Inspection_Shop_Task__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Shop__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Canada</value>
    </filters>
    <filters>
        <field>Inspection_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Canada Future Tasks</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Canada_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>