force-app/main/default/objects/Inspection_Shop_Task__c/listViews/Today_Task.listView-meta.xml
<ListView>
    <fullName>Today_Task</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Today__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Today Task</label>
</ListView>